--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -28,13 +28,22 @@
             <input type="text" id="keyword" name="keyword" class="form-control"
                    th:value="${param.keyword}">
         </div>
+        <div class="form-group">
+            <label for="indexName">Index Seçiniz:</label>
+            <select id="indexName" name="indexName" class="form-control">
+                <option th:each="indexName : ${indexNames}"
+                        th:value="${indexName}"
+                        th:text="${indexName}"
+                        th:selected="${indexName == selectedIndexName}"></option>
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Ara</button>
     </form>
 
     <div class="mt-4">
         <h2>Log Sonuçları</h2>
-        <table class="table table-bordered">
-            <thead>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
             <tr>
                 <th>Tarih</th>
                 <th>Mesaj</th>
@@ -50,7 +59,6 @@
                 <td th:text="${log.level}">Seviye</td>
                 <td th:text="${log.threadName}">İş Parçacığı</td>
                 <td th:text="${log.logId}">Log Id</td>
-
             </tr>
             </tbody>
         </table>
