--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -10,6 +10,7 @@
 <body>
 <div class="container mt-5">
     <h1 class="text-center">Log Arama</h1>
+
     <form action="#" th:action="@{/logs}" method="post" id="logSearchForm">
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -31,16 +32,13 @@
         <div class="form-group">
             <label for="indexName">Index Seçiniz:</label>
             <select id="indexName" name="indexName" class="form-control">
-                <option th:each="indexName : ${indexNames}"
-                        th:value="${indexName}"
-                        th:text="${indexName}"
-                        th:selected="${indexName == selectedIndexName}"></option>
+                <option th:each="indexName : ${indexNames}" th:value="${indexName}" th:text="${indexName}"></option>
             </select>
         </div>
         <button type="submit" class="btn btn-primary">Ara</button>
     </form>
 
-    <div class="mt-4">
+    <div class="mt-4" th:if="${goruldu}">
         <h2>Log Sonuçları</h2>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
