--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -3,50 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Log Arama</title>
+    <title>LogQuality Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="text-center">Log Arama</h1>
+    <h1 class="text-center">LogQuality Dashboard</h1>
 
     <form action="#" th:action="@{/logs}" method="post" id="logSearchForm">
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="startTime">Başlangıç Tarihi:</label>
+                <label for="startTime">Start date:</label>
                 <input type="date" id="startTime" name="startTime" class="form-control"
                        th:value="${param.startTime}" required>
             </div>
             <div class="form-group col-md-6">
-                <label for="endTime">Bitiş Tarihi:</label>
+                <label for="endTime">End date:</label>
                 <input type="date" id="endTime" name="endTime" class="form-control"
                        th:value="${param.endTime}" required>
             </div>
         </div>
         <div class="form-group">
-            <label for="keyword">Anahtar Kelime:</label>
+            <label for="keyword">Keyword:</label>
             <input type="text" id="keyword" name="keyword" class="form-control"
                    th:value="${param.keyword}">
         </div>
         <div class="form-group">
-            <label for="indexName">Index Seçiniz:</label>
+            <label for="indexName">Index name:</label>
             <select id="indexName" name="indexName" class="form-control">
                 <option th:each="indexName : ${indexNames}" th:value="${indexName}" th:text="${indexName}"></option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary">Ara</button>
+        <button type="submit" class="btn btn-primary">Search</button>
     </form>
 
     <div class="mt-4" th:if="${goruldu}">
-        <h2>Log Sonuçları</h2>
+        <h2>Log Results</h2>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
-                <th>Tarih</th>
-                <th>Mesaj</th>
-                <th>Seviye</th>
-                <th>İş Parçacığı</th>
+                <th>Date</th>
+                <th>Message</th>
+                <th>Level</th>
+                <th>Thread Name</th>
                 <th>Log Id</th>
             </tr>
             </thead>
@@ -56,12 +56,13 @@
                 <td th:text="${log.message}">Mesaj</td>
                 <td th:text="${log.level}">Seviye</td>
                 <td th:text="${log.threadName}">İş Parçacığı</td>
-                <td th:text="${log.logId}">Log Id</td>
+                <td>
+                    <a th:href="@{/logId/{indexName}/{logId} (indexName=${selectedIndexName}, logId=${log.logId})}" th:text="${log.logId}">Log Id</a>
+                </td>
             </tr>
             </tbody>
         </table>
     </div>
 </div>
-
 </body>
 </html>
