--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>LogQuality Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        /* Night mode styles */
+        body.night-mode {
+            background-color: #333;
+            color: #f1f1f1;
+        }
+        .table.night-mode {
+            background-color: #444;
+        }
+        .thead-dark.night-mode {
+            background-color: #555;
+            color: #fff;
+        }
+    </style>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
@@ -40,8 +54,8 @@
 
     <div class="mt-4" th:if="${goruldu}">
         <h2>Log Results</h2>
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
+        <table class="table table-striped table-bordered night-mode">
+            <thead class="thead-dark night-mode">
             <tr>
                 <th>Date</th>
                 <th>Message</th>
@@ -64,5 +78,14 @@
         </table>
     </div>
 </div>
+
+<script>
+    // Listen for night mode toggle message from parent
+    window.addEventListener('message', (event) => {
+        if (event.data && typeof event.data.nightMode !== 'undefined') {
+            document.body.classList.toggle('night-mode', event.data.nightMode);
+        }
+    });
+</script>
 </body>
 </html>
