--- a/src/main/resources/templates/logBlock.html
+++ b/src/main/resources/templates/logBlock.html
@@ -12,12 +12,24 @@
             margin-left: 200px;
             margin-right: 200px;
         }
+        /* Night mode styles */
+        body.night-mode {
+            background-color: #333;
+            color: #f1f1f1;
+        }
+        .table.night-mode {
+            background-color: #444;
+        }
+        .thead-dark.night-mode {
+            background-color: #555;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
 <div class="custom-container mt-5">
     <h1 class="text-center" th:text="'Log Block for ' + ${logId}"></h1>
-   <div class="mt-4">
+    <div class="mt-4">
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
@@ -38,5 +50,13 @@
         </table>
     </div>
 </div>
+<script>
+    // Listen for night mode toggle message from parent
+    window.addEventListener('message', (event) => {
+        if (event.data && typeof event.data.nightMode !== 'undefined') {
+            document.body.classList.toggle('night-mode', event.data.nightMode);
+        }
+    });
+</script>
 </body>
 </html>
